--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  uuid: ^4.2.1
+  flutter_riverpod: ^2.4.9
+  image_picker: ^1.0.4
+  location: ^5.0.3
+  http: ^1.1.2
+  google_maps_flutter: ^2.5.0
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
